2005-11-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/audioconvert/gstaudioconvert.c:
	  Fix typo in docs. 

2005-11-08  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_internal_chain),
	(gst_ogg_pad_submit_packet), (gst_ogg_chain_new):
	  Initialise segment_stop to GST_CLOCK_TIME_NONE when
	  creating a new chain; should fix live streaming. Also
	  add more debug output and fix a typo.

2005-11-08  Brian Cameron  <brian dot cameron at sun dot com>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst/volume/gstvolume.c: (volume_set_caps):
	  Fix compilation on Solaris with Forte. (#320923)

2005-11-08  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	No need to do a typecheck.

2005-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/alsa/gstalsa.h:
	  We register a debug category, so let's use it.

2005-11-04  Zeeshan Ali  <zeenix@gmail.com>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_class_init), (gst_base_rtp_depayload_wait):
	Fixed a small problem.

2005-11-04  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/Makefile.am:
	* examples/seeking/scrubby.c: (gst_element_factory_make_or_warn),
	(dynamic_link), (setup_dynamic_link), (make_wav_pipeline),
	(make_playerbin_pipeline), (format_value), (update_scale),
	(speed_cb), (seek_cb), (do_seek), (start_seek), (stop_seek),
	(play_cb), (pause_cb), (stop_cb), (print_message), (bus_message),
	(print_usage), (main):
	Added app for playback speed testing.

	* examples/seeking/seek.c: (dynamic_link),
	(make_avi_msmpeg4v3_mp3_pipeline), (make_avi_pipeline),
	(make_mpeg_pipeline), (do_seek), (set_update_scale),
	(message_received), (main):
	Updated seek example.

2005-11-04  Zeeshan Ali  <zeenix@gmail.com>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_class_init), (gst_base_rtp_depayload_init),